--- a/kafka/deployment.yaml
+++ b/kafka/deployment.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: kafka
-        image: bitnami/kafka:3.6.0
+        image: bitnami/kafka:latest
         ports:
         - containerPort: 9092
           name: kafka
