--- a/kafka/deployment.yaml
+++ b/kafka/deployment.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: kafka
-        image: confluentinc/cp-kafka:7.5.0
+        image: apache/kafka:3.7.0
         ports:
         - containerPort: 9092
           name: kafka
@@ -49,8 +49,16 @@ spec:
           value: "CONTROLLER"
         - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
           value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "1"
+        - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
+          value: "1"
+        - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
+          value: "1"
         - name: CLUSTER_ID
           value: "MkU3OEVBNTcwNTJENDM2Qk"
+        - name: KAFKA_KRAFT_MODE
+          value: "true"
         envFrom:
         - secretRef:
             name: kafka-credentials
