Add External Secrets for declarative secret management
- ClusterSecretStore для Vault
- ExternalSecrets для PostgreSQL, Kafka, MinIO
- ConfigMaps с connection info (URLs автогенерируются)
- Vault token в отдельном Secret (НЕ в git)

--- a/values.yaml
+++ b/values.yaml
@@ -10,9 +10,12 @@ baseDomain: zhendorenko.ru
 externalHost: zhendorenko.ru
 
 # Vault
+# ВАЖНО: Secret vault-token должен быть создан вручную:
+# kubectl create secret generic vault-token -n kube-system --from-literal=token=<YOUR_TOKEN>
 vault:
   enabled: true
   address: https://vault.zhendorenko.ru
+  tokenNamespace: kube-system
 
 # PostgreSQL
 postgresql:
