Fix gitignore and add External Secrets manifests

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.key
 *.pem
 *.crt
-*-secret.yaml
 secrets/
+# НЕ игнорируем external-secret.yaml (это не секреты, а их декларации)
 
 # IDE
 .vscode/
