--- a/templates/kafka/connection-info.yaml
+++ b/templates/kafka/connection-info.yaml
@@ -1,17 +1,15 @@
 {{- if .Values.kafka.enabled }}
 ---
-# Секрет с полной информацией для подключения к Kafka
-# Автоматически генерируется из Vault и Values
+# ConfigMap с информацией для подключения к Kafka
 apiVersion: v1
-kind: Secret
+kind: ConfigMap
 metadata:
   name: kafka-connection-info
   namespace: {{ .Values.kafka.namespace }}
   labels:
     app: kafka
     component: connection-info
-type: Opaque
-stringData:
+data:
   # Внутренний доступ (из кластера)
   internal-host: "kafka.{{ .Values.kafka.namespace }}.svc.cluster.local"
   internal-port: "{{ .Values.kafka.external.port }}"
