--- a/templates/kafka/deployment.yaml
+++ b/templates/kafka/deployment.yaml
@@ -28,15 +28,14 @@ spec:
       labels:
         app: kafka
     spec:
-      {{- if .Values.kafka.external.enabled }}
-      hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
-      {{- end }}
       containers:
       - name: kafka
         image: apache/kafka:3.7.0
         ports:
         - containerPort: 9092
+          {{- if .Values.kafka.external.enabled }}
+          hostPort: 9092
+          {{- end }}
           name: kafka
         env:
         - name: KAFKA_NODE_ID
