--- a/templates/kafka/deployment.yaml
+++ b/templates/kafka/deployment.yaml
@@ -23,6 +23,9 @@ spec:
         image: apache/kafka:3.7.0
         ports:
         - containerPort: 9092
+          {{- if .Values.kafka.external.enabled }}
+          hostPort: 9092
+          {{- end }}
           name: kafka
         env:
         - name: KAFKA_NODE_ID
