--- a/templates/postgres/deployment.yaml
+++ b/templates/postgres/deployment.yaml
@@ -35,6 +35,9 @@ spec:
         image: postgres:15-alpine
         ports:
         - containerPort: 5432
+          {{- if .Values.postgresql.external.enabled }}
+          hostPort: 5432
+          {{- end }}
           name: postgres
         envFrom:
         - secretRef:
