feat: добавить Ollama LLM в data-infrastructure
- Добавлена конфигурация Ollama с легкой моделью llama3.2:3b
- Созданы Kubernetes манифесты: deployment, external-secret, connection-info, model-setup
- Обновлен Chart.yaml до версии 1.1.0
- Добавлены ресурсы: 1-4GB RAM, 0.5-2 CPU, 20GB хранилища
- Настроен внешний доступ на порту 11434
- Job для автоматической загрузки модели при первом запуске

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: data-infrastructure
-description: PostgreSQL, Kafka, MinIO with Vault integration
+description: PostgreSQL, Kafka, MinIO, Ollama LLM with Vault integration
 type: application
-version: 1.0.0
-appVersion: "1.0"
+version: 1.1.0
+appVersion: "1.1"
