feat: настроить ArgoCD для автоматического управления Ollama
- Добавлены аннотации ArgoCD для правильного порядка синхронизации
- Улучшен Job для загрузки модели с лучшей обработкой ошибок
- Deployment: sync-wave=1 (запускается первым)
- Job: sync-wave=2, Prune=false (запускается после deployment, не удаляется)
- Увеличен timeout ожидания готовности Ollama до 5 минут
- Добавлено логирование для отладки
- Обновлен IP адрес Ollama в скрипте: 10.43.126.193

--- a/templates/ollama/deployment.yaml
+++ b/templates/ollama/deployment.yaml
@@ -22,6 +22,8 @@ kind: Deployment
 metadata:
   name: ollama
   namespace: {{ .Values.ollama.namespace }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   replicas: 1
   selector:
