fix: добавить аннотации ArgoCD для PVC чтобы избежать ошибок обновления
- Добавлена аннотация 'argocd.argoproj.io/sync-options: Replace=false' для всех PVC
- Это предотвращает попытки ArgoCD обновлять существующие PVC
- PVC нельзя изменять после создания, кроме размера хранилища
- Исправлена ошибка: 'spec is immutable after creation except resources.requests'

--- a/templates/minio/deployment.yaml
+++ b/templates/minio/deployment.yaml
@@ -8,6 +8,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: minio-pvc
   namespace: storage
+  annotations:
+    argocd.argoproj.io/sync-options: Replace=false
 spec:
   accessModes:
     - ReadWriteOnce
