fix: исправить проблемы с ArgoCD синхронизацией
- Сделал ExternalSecret опциональным (vault.enabled: false по умолчанию)
- Добавил аннотацию Prune=false для ExternalSecret
- Добавил Replace=false для Job чтобы не пересоздавать успешно выполненный Job
- Добавил настройки vault в values.yaml
- Исправлена ошибка: 'Secret does not exist' для ai/ollama

--- a/templates/ollama/external-secret.yaml
+++ b/templates/ollama/external-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ollama.enabled }}
+{{- if and .Values.ollama.enabled .Values.ollama.vault.enabled }}
 ---
 # External Secret для Ollama - опциональные настройки
 # Ollama обычно не требует секретов, но можно добавить для конфигурации
@@ -7,6 +7,8 @@ kind: ExternalSecret
 metadata:
   name: ollama-vault-config
   namespace: {{ .Values.ollama.namespace }}
+  annotations:
+    argocd.argoproj.io/sync-options: Prune=false
 spec:
   refreshInterval: 24h
   secretStoreRef:
@@ -18,10 +20,10 @@ spec:
   data:
   - secretKey: OLLAMA_HOST
     remoteRef:
-      key: ai/ollama
+      key: {{ .Values.ollama.vault.path | default "ai/ollama" }}
       property: host
   - secretKey: OLLAMA_ORIGINS
     remoteRef:
-      key: ai/ollama
+      key: {{ .Values.ollama.vault.path | default "ai/ollama" }}
       property: origins
 {{- end }}
