fix: исправить проблему с immutable Job spec.template
- Изменил имя Job на уникальное: ollama-model-setup-llama3-2-3b
- Теперь ArgoCD может создавать новые Job'ы при изменении логики
- Убрал лишние аннотации, оставил только Prune=false
- Исправлена ошибка: 'spec.template: field is immutable'

--- a/templates/ollama/model-setup.yaml
+++ b/templates/ollama/model-setup.yaml
@@ -4,10 +4,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: ollama-model-setup
+  name: ollama-model-setup-{{ .Values.ollama.defaultModel | replace ":" "-" | replace "." "-" }}
   namespace: {{ .Values.ollama.namespace }}
   annotations:
-    argocd.argoproj.io/sync-options: Prune=false,Replace=false
+    argocd.argoproj.io/sync-options: Prune=false
     argocd.argoproj.io/sync-wave: "2"
 spec:
   template:
