--- a/values.yaml
+++ b/values.yaml
@@ -90,14 +90,14 @@ ollama:
     enabled: true
     port: 11434
     # URL: ollama.gorky.zhendorenko.ru:11434
-  # Ресурсы
+  # Ресурсы (уменьшены из-за нехватки памяти на стенде)
   resources:
     requests:
-      memory: "3Gi"
-      cpu: "500m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "6Gi"
-      cpu: "2000m"
+      memory: "1Gi"
+      cpu: "1000m"
   storage:
     size: 20Gi
   # Модель по умолчанию (легкая и эффективная)
@@ -106,4 +106,23 @@ ollama:
   vault:
     enabled: false
     path: "ai/ollama"
+
+# Open WebUI для Ollama
+openWebui:
+  enabled: true
+  namespace: ai
+  image: ghcr.io/open-webui/open-webui:main
+  # Внешний доступ
+  external:
+    enabled: true
+    port: 8080
+    # URL: open-webui.gorky.zhendorenko.ru:30880
+  # Ресурсы
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "512Mi"
+      cpu: "500m"
 
