Optimize Open WebUI resources and health checks
- Уменьшены лимиты памяти до 1Gi (было 2Gi)
- Увеличены таймауты для health checks
- initialDelaySeconds: 120s для liveness, 60s для readiness
- Добавлены timeoutSeconds для стабильности

--- a/templates/open-webui/simple-deployment.yaml
+++ b/templates/open-webui/simple-deployment.yaml
@@ -27,23 +27,25 @@ spec:
           value: "your-secret-key-here"
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "512Mi"
+            cpu: "200m"
           limits:
-            memory: "2Gi"
-            cpu: "2000m"
+            memory: "1Gi"
+            cpu: "1000m"
         livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 120
+          periodSeconds: 60
+          timeoutSeconds: 30
+        readinessProbe:
           httpGet:
             path: /
             port: 8080
           initialDelaySeconds: 60
           periodSeconds: 30
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          timeoutSeconds: 15
 ---
 apiVersion: v1
 kind: Service
