--- a/values.yaml
+++ b/values.yaml
@@ -90,14 +90,14 @@ ollama:
     enabled: true
     port: 11434
     # URL: ollama.gorky.zhendorenko.ru:11434
-  # Ресурсы (уменьшены из-за нехватки памяти на стенде)
+  # Ресурсы (увеличены для работы с llama3.2:3b)
   resources:
     requests:
-      memory: "512Mi"
-      cpu: "200m"
+      memory: "3Gi"
+      cpu: "500m"
     limits:
-      memory: "1Gi"
-      cpu: "1000m"
+      memory: "4Gi"
+      cpu: "2000m"
   storage:
     size: 20Gi
   # Модель по умолчанию (легкая и эффективная)
