Обновить URL Ollama в Open WebUI
- Изменен OLLAMA_BASE_URL на ollama-external.ai:11434
- Open WebUI теперь будет подключаться к LoadBalancer сервису Ollama

--- a/templates/open-webui/simple-deployment.yaml
+++ b/templates/open-webui/simple-deployment.yaml
@@ -22,7 +22,7 @@ spec:
           name: web
         env:
         - name: OLLAMA_BASE_URL
-          value: "http://ollama.ai:11434"
+          value: "http://ollama-external.ai:11434"
         - name: WEBUI_SECRET_KEY
           value: "your-secret-key-here"
         resources:
