Добавить аутентификацию для Ollama и интеграцию с Vault
- Включена аутентификация Ollama с username/password
- Добавлена интеграция с Vault для хранения секретов
- Обновлен deployment Ollama для использования секретов из Vault
- Создан External Secret для синхронизации с Vault
- Обновлены конфигурации mos-industry-platform для использования аутентификации

--- a/templates/ollama/deployment.yaml
+++ b/templates/ollama/deployment.yaml
@@ -45,8 +45,30 @@ spec:
         env:
         - name: OLLAMA_HOST
           value: "0.0.0.0"
+        {{- if .Values.ollama.auth.enabled }}
+        - name: OLLAMA_ORIGINS
+          value: ""
+        {{- if .Values.ollama.vault.enabled }}
+        - name: OLLAMA_USER
+          valueFrom:
+            secretKeyRef:
+              name: ollama-auth
+              key: OLLAMA_USER
+        - name: OLLAMA_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: ollama-auth
+              key: OLLAMA_PASSWORD
+        {{- else }}
+        - name: OLLAMA_USER
+          value: {{ .Values.ollama.auth.username | quote }}
+        - name: OLLAMA_PASSWORD
+          value: {{ .Values.ollama.auth.password | quote }}
+        {{- end }}
+        {{- else }}
         - name: OLLAMA_ORIGINS
           value: "*"
+        {{- end }}
         - name: OLLAMA_MODELS
           value: "/root/.ollama/models"
         volumeMounts:
