--- a/templates/ollama/external-secret.yaml
+++ b/templates/ollama/external-secret.yaml
@@ -1,11 +1,10 @@
 {{- if and .Values.ollama.enabled .Values.ollama.vault.enabled }}
 ---
-# External Secret для Ollama - опциональные настройки
-# Ollama обычно не требует секретов, но можно добавить для конфигурации
+# External Secret для Ollama аутентификации
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: ollama-vault-config
+  name: ollama-vault-auth
   namespace: {{ .Values.ollama.namespace }}
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
@@ -15,15 +14,15 @@ spec:
     name: vault-backend
     kind: ClusterSecretStore
   target:
-    name: ollama-config
+    name: ollama-auth
     creationPolicy: Owner
   data:
-  - secretKey: OLLAMA_HOST
+  - secretKey: OLLAMA_USER
     remoteRef:
       key: {{ .Values.ollama.vault.path | default "ai/ollama" }}
-      property: host
-  - secretKey: OLLAMA_ORIGINS
+      property: username
+  - secretKey: OLLAMA_PASSWORD
     remoteRef:
       key: {{ .Values.ollama.vault.path | default "ai/ollama" }}
-      property: origins
+      property: password
 {{- end }}
