--- a/templates/kafka/deployment.yaml
+++ b/templates/kafka/deployment.yaml
@@ -24,6 +24,8 @@ spec:
         ports:
         - containerPort: 9092
           name: kafka
+        - containerPort: 9094
+          name: kafka-external
         env:
         - name: KAFKA_NODE_ID
           value: "1"
@@ -32,7 +34,7 @@ spec:
         - name: KAFKA_CONTROLLER_QUORUM_VOTERS
           value: "1@127.0.0.1:9093"
         - name: KAFKA_LISTENERS
-          value: "PLAINTEXT://:9092,CONTROLLER://:9093"
+          value: "PLAINTEXT://:9092,EXTERNAL://:9094,CONTROLLER://:9093"
         - name: KAFKA_ADVERTISED_LISTENERS
           value: "PLAINTEXT://kafka.messaging.svc.cluster.local:9092,EXTERNAL://zhendorenko.ru:30092"
         - name: KAFKA_CONTROLLER_LISTENER_NAMES
