Fix External Secrets API version from v1beta1 to v1

--- a/templates/kafka/external-secret.yaml
+++ b/templates/kafka/external-secret.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.kafka.enabled }}
 ---
 # External Secret для Kafka - автоматически синхронизируется из Vault
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: kafka-vault-credentials
