--- a/templates/ollama/external-secret.yaml
+++ b/templates/ollama/external-secret.yaml
@@ -1,7 +1,7 @@
 {{- if and .Values.ollama.enabled .Values.ollama.vault.enabled }}
 ---
 # External Secret для Ollama аутентификации
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: ollama-vault-auth
