--- a/templates/postgres/external-secret.yaml
+++ b/templates/postgres/external-secret.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.postgresql.enabled }}
 ---
 # External Secret для PostgreSQL - автоматически синхронизируется из Vault
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: postgres-vault-credentials
