Fix deployments to use direct environment variables instead of secrets
- Replace secretRef with direct env variables in Kafka, MinIO, and PostgreSQL deployments
- Remove dependency on External Secrets for basic functionality
- Use hardcoded credentials for all services

--- a/templates/kafka/deployment.yaml
+++ b/templates/kafka/deployment.yaml
@@ -51,9 +51,11 @@ spec:
           value: "MkU3OEVBNTcwNTJENDM2Qk"
         - name: KAFKA_KRAFT_MODE
           value: "true"
-        envFrom:
-        - secretRef:
-            name: kafka-credentials
+        env:
+        - name: KAFKA_USER
+          value: "admin"
+        - name: KAFKA_PASSWORD
+          value: "admin2025!SecurePass"
 ---
 apiVersion: v1
 kind: Service
